--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ img, picture, video, canvas, svg {
 h1 {
   font-family: 'Poppins', sans-serif;
   font-weight: 200;
-  font-size: clamp(1.7rem, 1.5rem + 1vw, 3rem);
+  font-size: clamp(1.7rem, 1.5rem + 1vw, 2.5rem);
   color: var(--Very-Dark-Blue);
 }
 
@@ -75,7 +75,7 @@ h2 {
 }
 
 .h1--Small {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 p {
@@ -94,7 +94,7 @@ main {
 
 .container{
   padding: 1rem;
-  max-width: 71rem;
+  max-width: 75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -103,7 +103,7 @@ main {
 .container__header {
   text-align: center;
   margin-bottom: 4rem;
-  max-width: 40rem;
+  max-width: 36rem;
 }
 
 .container__header h2 {
@@ -119,7 +119,7 @@ main {
 
 .container__content__card {
   width: 100%;
-  max-width: 21.45rem;
+  max-width: 23rem;
   height: 15rem;
   padding: 1.5rem;
   border-radius: 0 0 0.3rem 0.3rem;
@@ -130,6 +130,12 @@ main {
   background-color: var(--Default-White);
 
   position: relative;
+}
+
+.container__content__card__header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .container__content__card svg {
@@ -171,7 +177,7 @@ main {
 
 
 
-@media screen and (min-width: 70.313rem) {
+@media screen and (min-width: 75rem) {
 
   .container__header {
     margin-bottom: 5rem;
